<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">events Now</string>
    <string name="home">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="changepwd">Change Password</string>
    <string name="my_tickets">My Tickets</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="search_event">Search Event</string>
    <string name="login">Login</string>
    <string name="signin">Sign in</string>
    <string name="signup">Sign up</string>
    <string name="pticket">Print Ticket</string>
    <string name="search">SEARCH</string>
    <string name="scategory">Select Category</string>
    <string name="keyword">Search event by keyword</string>
    <string name="forgot">Forgot password</string>
    <string name="new_here"><u>New here\? Sign Up</u></string>
    <string name="email">Email address *</string>
    <string name="enteryour">Enter Your Booking/Ticket Id *</string>
    <string name="get_tickets">Get tickets</string>
    <string name="facebook">Facebook</string>
    <string name="ordernow">ORDER NOW</string>
    <string name="twitter">Twitter</string>
    <string name="addcal">Add to Calendar</string>
    <string name="addfav">Add to Favorite</string>
    <string name="removefav">Remove From Favorite</string>
    <string name="readmore">read more</string>
    <string name="buy">BUY TICKETS NOW </string>
    <string name="view">VIEW TICKETS </string>
    <string name="buytickets">Buy Tickets </string>
    <string name="pwd">Password *</string>
    <string name="contactinfo">Contact Info</string>
    <string name="organizer">Contact the Organizer</string>
    <string name="viewwebsite">Click to view website</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="ticketcat">Ticket</string>
    <string name="price">Price</string>
    <string name="qnty">Qty</string>
    <string name="fname">Name *</string>
    <string name="lname">Last Name *</string>
    <string name="email1">Email</string>
    <string name="phone">Phone *</string>
    <string name="address">Address *</string>
    <string name="opwd">Old Password *</string>
    <string name="pwd1">Password *</string>
    <string name="npwd">New Password *</string>
    <string name="cpwd">Confirm Password *</string>
    <string name="msg">Message *</string>
    <string name="myfavorite">My Favorites</string>
    <string name="logout">Logout</string>
    <string name="cname">Company Name</string>
    <string name="state">State *</string>
    <string name="city">City *</string>
    <string name="submit">Submit</string>
    <string name="total">Total</string>
    <string name="locations">Locations</string>
    <string name="added"> has been successfully added to your favorites.</string>
    <string name="removed"> has been successfully removed from your favorites</string>
    <string name="accept">Accept Terms &amp; Conditions</string>
    <string name="cash">Cash On Delivery </string>
    <string name="iam">I am attending this event</string>
    <string name="poptions">Payment Options</string>
    <string name="create">Create Account</string>
    <string name="attendee">Attendee Details</string>
    <string name="next">Next</string>
    <string name="your">Your Details</string>
    <string name="star">*</string>
    <string name="view1">View</string>
    <string name="order">Order Summary</string>
    <string name="ticket_regi">Ticket Registration</string>
    <string name="not">Number of Tickets</string>
    <string name="st">Sub Total</string>
    <string name="promo">Enter promotional code</string>
    <string name="sc">Service charge</string>
    <string name="disc">Discount</string>
    <string name="ta">Total Amount</string>
    <string name="dt">Date &amp; Time</string>
    <string name="venue">Venue</string>
    <string name="payoptions">Payment Options</string>
    <string name="odetails">Order Details </string>
    <string name="ticket">Ticket</string>
    <string name="porder">Place Order</string>
    <string name="ticketid">Ticket ID</string>
    <string name="event">Event</string>
    <string name="ticket_type">Ticket Type</string>
    <string name="name">Name</string>
    <string name="vticket">View Ticket</string>
    <string name="semail">Send Email</string>
     <string name="baddress">Billing Address</string>

</resources>