<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    
    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/fname"
        android:layout_alignParentLeft="true" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
            <EditText
        android:id="@+id/fname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
          android:background="@drawable/background"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/fname"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black" >
    </EditText>

    <EditText
        android:id="@+id/lname"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/fname"
        android:layout_alignRight="@+id/fname"
        android:layout_below="@+id/fname"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/lname"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        android:textColor="@color/black" >
    </EditText>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/lname"
        android:layout_alignRight="@+id/lname"
        android:layout_below="@+id/lname"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:textColor="@color/black" >
    </EditText>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/email"
        android:layout_alignRight="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background"
        android:cursorVisible="true"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="phone"
        android:maxLength="10"
        android:textColor="@color/black" >
    </EditText>

    <EditText
        android:id="@+id/message"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_alignLeft="@+id/phone"
        android:layout_alignRight="@+id/phone"
        android:layout_below="@+id/phone"
        android:layout_marginTop="10dp"
        android:background="@drawable/background"
        android:gravity="top|left"
        android:hint="@string/msg"
        android:inputType="textMultiLine"
        android:lines="3"
        android:paddingLeft="10dp" />

    <Button
        android:id="@+id/submit"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/message"
        android:layout_below="@+id/message"
        android:layout_marginTop="23dp"
        android:background="@drawable/square"
        android:text="Submit"
        android:textColor="@color/white"
        android:textSize="@dimen/button_height"
        android:textStyle="bold" />

    <View
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/submit" />
            
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>